[package]
name = "ip-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib/lib.rs"
name="utils"


[dependencies]
reqwest="0.11.11"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
serde_json="1.0"
tui="0.18.0"
crossterm="0.25.0"